[gd_scene load_steps=6 format=3 uid="uid://btwufhjl24n5j"]

[ext_resource type="Script" path="res://weapon/basic_ranged.gd" id="1_liwxu"]
[ext_resource type="AudioStream" uid="uid://buio5iw1388g0" path="res://weapon/пистолет 1.wav" id="2_3xgcu"]
[ext_resource type="Texture2D" uid="uid://uvxejgojwl0p" path="res://core/white_circle.svg" id="3_wijuy"]
[ext_resource type="Texture2D" uid="uid://b6awf5ctuqe17" path="res://weapon/weaponary.png" id="4_wk8l1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8qr2d"]
resource_local_to_scene = true
atlas = ExtResource("4_wk8l1")

[node name="BasicRanged" type="Node2D"]
script = ExtResource("1_liwxu")

[node name="ShootCooldown" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="ReloadTime" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="BulletOuput" type="Marker2D" parent="."]
position = Vector2(55, -2)

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3xgcu")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../UI")
update_rotation = false
update_scale = false

[node name="UI" type="Node2D" parent="."]
top_level = true

[node name="ReloadBar" type="TextureProgressBar" parent="UI"]
modulate = Color(1, 1, 1, 0.443137)
offset_left = 14.0
offset_top = -73.0
offset_right = 314.0
offset_bottom = 227.0
scale = Vector2(0.152552, 0.152552)
fill_mode = 4
texture_progress = ExtResource("3_wijuy")
tint_progress = Color(0.870588, 0.117647, 0.32549, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(92, -1)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_8qr2d")

[connection signal="timeout" from="ReloadTime" to="." method="_on_reload_time_timeout"]
